5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1613_1805.log
== TEST (2019-03-31 02:07:30) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite X: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - P
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    xB = B - P
NameError: name 'P' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:10:17) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite X: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = yB - yA
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    xB = yB - yA
NameError: name 'yB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:10:58) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite X: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- OUTPUT:
24.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:11:16) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite X: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- OUTPUT:
24.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:11:36) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite X: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.17018
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
24.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
0.9
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:12:58) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.198761
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
24.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
0.9
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:13:33) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- OUTPUT:
24.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:13:47) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = A 
xB = B - A
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.143274
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
24.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
0.9
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:16:17) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
xA = yA 
xB = yB 
yA = A
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    xA = yA 
NameError: name 'yA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:17:09) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
yA = A
xA = yA 
xB = yB 
yB = B
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    xB = yB 
NameError: name 'yB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:17:39) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
yA = A
yB = B
xA = yA 
xB = yB 
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- OUTPUT:
39.0
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:17:58) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
yA = A
yB = B
xA = yA 
xB = yB 
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.18198
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
39.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.4
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:18:24) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
yA = A
yB = B
xA = A
xB = B 
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.15198
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
39.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.4
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:18:30) 
-- CODE:
X = float(input("Digite X: "))
Y = float(input("Digite Y: "))
A = float(input("Digite A: "))
B = float(input("Digite B: "))
yA = A
yB = B
xA = A
xB = B 
xM = (xB + xA)/2
yM = (yB + yA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.127261
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
39.0
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.4
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:23:13) 
-- CODE:
XA = float(input("Digite X: "))
YA = float(input("Digite Y: "))
XB = float(input("Digite A: "))
YB = float(input("Digite B: "))
xM = (XB + XA)/2
yM = (YB + YA)/2
print(round(xM, 1))
print(round(yM, 1))
-- EXECUTION TIME:
0.136972
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
